<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Navy PFA</string>
    <string name="ga_api_key">UA-23366060-2</string>
    <string name="title_instructions">Instructuctions</string>
    <string name="emtpy_string" />
    <string name="instructions">Instructions</string>
    <string name="log">Log</string>
    <string name="calculators">Calculators</string>
    <string name="profile">Profile</string>
    <string name="andrios">AndriOS</string>
    <string name="crunches">Crunches</string>
    <string name="run">Run</string>
    <string name="my_scores">My Scores</string>
    <string name="components">Components</string>
    <string name="pushups">Pushups</string>
    <string name="total">Total</string>
    <string name="my_performance">My Performance</string>
    <string name="situps">Situps</string>
    <string name="run_time">Run Time</string>
    <string name="_00_00">00:00</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="log_prt">Log PRT</string>
    <string name="score_failure">Failure</string>
    <string name="score_probationary">Probationary</string>
    <string name="score_sat_med">Satisfactory, Medium</string>
    <string name="score_sat_high">Satisfactory, High</string>
    <string name="score_good_low">Good, Low</string>
    <string name="score_good_med">Good, Medium</string>
    <string name="score_good_high">Good, High</string>
    <string name="score_excellent_low">Excellent, Low</string>
    <string name="score_excellent_med">Excellent, Medium</string>
    <string name="score_excellent_high">Excellent, High</string>
    <string name="score_outstanding_low">Outstanding, Low</string>
    <string name="score_outstanding_med">Outstanding, Medium</string>
    <string name="score_outstanding_high">Outstanding, High</string>
    <string name="label_450_swim">450m Swim Time</string>
    <string name="label_500_swim_time">500m Swim Time</string>
    <string name="label_cardio_elliptical_time">Elliptical Time</string>
    <string name="label_cardio_bike_time">Bike Time</string>
    <string name="label_cardio_run_time">Run Time</string>
    <string name="videos">Videos</string>
    <string name="cardioswim450">450m Swim</string>
    <string name="cardioswim500">500m Swim</string>
    <string name="cardiorun">1.5 Mile Run</string>
    <string name="cardiobike">Bike</string>
    <string name="cardioellipefx556">EFX 556</string>
    <string name="cardioellipct9500hr">CT 9500 HR</string>
    <string name="cardioellipct9500">CT 9500</string>
    <string name="cardioellip95xi">95 XI</string>
    <string name="cardioellipe916">E9 16</string>
</resources>
