<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical">

    <!--  Start Chris' change for Gender and Age  -->


    <!--  End Chris' change for Gender and Age  -->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_scores"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout28"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/components"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/linearLayout18"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#ffffff"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/pullupScoreLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:id="@+id/pullupScoreLBL"
                    android:layout_width="70dp"
                    android:layout_height="fill_parent"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:text="@string/pushups"/>

                <TextView
                    android:id="@+id/prtActivityPushupScoreLBL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/SitupScoreLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:text="@string/crunches"/>

                <TextView
                    android:id="@+id/prtActivitySitupScoreLBL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/RunScoreLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:text="@string/run"/>

                <TextView
                    android:id="@+id/prtActivityRunScoreActivity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout29"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/linearLayout23"
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:background="#ffffff"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/calculatorScoreLBL"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_performance"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout14"
                    android:layout_width="1px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="1px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pushups"/>

                <TextView
                    android:id="@+id/calculatorPushUpLBL"
                    android:layout_width="1px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout20"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/calculatorPushupsDownBTN"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_weight="0"
                        android:background="@drawable/minus"
                        android:text=""/>
                </LinearLayout>

                <SeekBar
                    android:id="@+id/calculatorPushupSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/calculatorPushupsUpBTN"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_weight="0"
                        android:background="@drawable/plus"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout15"
                    android:layout_width="1px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="1px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/situps"/>

                <TextView
                    android:id="@+id/calculatorSitUpLBL"
                    android:layout_width="1px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout19"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/linearLayout12"
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/calculatorSitupsDownBTN"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_weight="0"
                        android:background="@drawable/minus"
                        android:text=""/>
                </LinearLayout>

                <SeekBar
                    android:id="@+id/calculatorSitUpSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:id="@+id/linearLayout13"
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/calculatorSitupsUpBTN"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_weight="0"
                        android:background="@drawable/plus"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout16"
                    android:layout_width="1px"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/prtActivityCardioLBL"
                    android:layout_width="1px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/run_time"/>

                <TextView
                    android:id="@+id/calculatorRunLBL"
                    android:layout_width="1px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_00_00"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout17"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/linearLayout21"
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/calculatorSecondsDownBTN"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_weight="0"
                        android:background="@drawable/minus"
                        android:text=""/>
                </LinearLayout>

                <SeekBar
                    android:id="@+id/calculatorRunTimeSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:id="@+id/linearLayout22"
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/calculatorSecondsUpBTN"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_weight="0"
                        android:background="@drawable/plus"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:layout_weight="1"
        android:gravity="center|right">

        <LinearLayout
            android:id="@+id/linearLayout24"
            android:layout_width="75dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"/>

        <CheckBox
            android:id="@+id/prtActivityAltitudeCheckBox"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="&gt;5000ft"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.andrios.prt.SegmentedControlButton
                android:id="@+id/prtActivityrMaleRDO"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:checked="true"
                android:text="@string/male"/>

            <com.andrios.prt.SegmentedControlButton
                android:id="@+id/prtActivityrFemaleRDO"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/female"/>
        </RadioGroup>

        <Spinner
            android:id="@+id/prtActivityAgeSpinner"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/prtActivityBottomBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="0">

        <Button
            android:id="@+id/prtActivityLogBTN"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/log_prt"
            android:visibility="invisible"/>

    </RelativeLayout>
</LinearLayout>
